# outlier-engine

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  diagnostic.py  pyproject.toml  repack_70b_for_paging.py  run_day7_experiments.py  run_day7_experiments_cont.py  run_day8_experiments.py
benches/: head_to_head_day14.py
data/: .gitignore
desktop_app/: README.md
docs/: OUTLIER_V4_SPEC.md
landing_page/: index.html
outlier_engine/: __init__.py  async_engine.py  batched_expert.py  cache_prior_routing.py  cli.py  compat.py  et_routing.py  expert_store.py  generate.py  loader.py  model.py  moe.py  paging.py  paging.py.bak.1775692592  paging_v2.py  prefetch.py  profile_store.py  profiles.py  quantize_utils.py  routing_predictor.py  ternary_matmul.py  ternary_ops.py  tokenizer.py  ttt.py
results_day7/: coding_profile.json  exp1_summary.json  exp2_summary.json  exp3_summary.json  exp4_summary.json  exp5_summary.json  exp6_summary.json  exp7_summary.json  legal_profile.json  medical_16_profile.json  medical_32_profile.json  medical_8_profile.json  medical_profile.json  pre_attention_routing_traces_meta.json  routing_predictors.pt  run_cont_log.txt  run_exp3_4_log.txt  run_log.txt
scripts/: bench_paged.py  bench_paged_v2.py  diagnose_generation.py  generate_distillation_corpus.py  train_v3_experts.py
tests/: test_alpha_loader.py  test_cache.py  test_cli.py  test_et_routing.py  test_expert_store.py  test_generate.py  test_licensing.py  test_loader.py  test_loader_aliasing.py  test_metal_production.py  test_packing.py  test_paging_v2.py  test_roe.py  (+12 more)
(+66 files in other folders)
